--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_offers">
                         <div class="about_thumb">
-                            <a href="A12.html" target="_blank"><img src="img/offers/1.jpg" alt=""></a>
+                            <a href="A12.html" target="_blank"><img src="img/offers/1.JPG" alt=""></a>
                         </div>
                         <h3>AMS A12</h3>
                         <ul>
@@ -216,7 +216,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_offers">
                         <div class="about_thumb">
-                            <a href="B7.html" target="_blank"><img src="img/offers/2.jpg" alt=""></a>
+                            <a href="B7.html" target="_blank"><img src="img/offers/2.JPG" alt=""></a>
                         </div>
                         <h3>AMS B7</h3>
                         <ul>
