--- a/A12.html
+++ b/A12.html
@@ -65,43 +65,43 @@
 				<h3>Galeria</h3>
 				<div class="row gallery-item">
 					<div class="col-md-4">
-						<a href="img/A12/g1.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g1.jpg);"></div>
+						<a href="img/A12/g1.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g1.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="img/A12/g2.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g2.jpg);"></div>
+						<a href="img/A12/g2.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g2.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="img/A12/g3.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g3.jpg);"></div>
+						<a href="img/A12/g3.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g3.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-6">
-						<a href="img/A12/g4.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g4.jpg);"></div>
+						<a href="img/A12/g4.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g4.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-6">
-						<a href="img/A12/g5.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g5.jpg);"></div>
+						<a href="img/A12/g5.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g5.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="img/A12/g6.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g6.jpg);"></div>
+						<a href="img/A12/g6.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g6.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="img/A12/g7.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g7.jpg);"></div>
+						<a href="img/A12/g7.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g7.JPG);"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="img/A12/g8.jpg" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url(img/A12/g8.jpg);"></div>
+						<a href="img/A12/g8.JPG" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url(img/A12/g8.JPG);"></div>
 						</a>
 					</div>
 				</div>
