--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
                             <h3 class="footer_title">
                                 Rezerwacje
                             </h3>
-                            <p class="footer_text">kom. +48 579 061 242
+                            <p class="footer_text">kom. +48 579 061 242<br>
+                                amsrewal@interia.pl
 
                         </div>
                     </div>
