--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="media contact-info">
                     <span class="contact-info__icon"><i class="ti-email"></i></span>
                     <div class="media-body">
-                        <h3>apartament@ams.com</h3>
+                        <h3>amsrewal@interia.pl</h3>
                         <p>Napisz do nas!</p>
                     </div>
                 </div>
